--- a/podman/Containerfile
+++ b/podman/Containerfile
@@ -1,1 +1,11 @@
-FROM
+# syntax=docker/dockerfile:1
+
+FROM python:3.8-slim-buster
+WORKDIR /cb_flask
+
+COPY requirements.txt ./config/requirements.txt
+RUN pip3 install -r ./config/requirements.txt
+
+COPY . . (python files into container)
+
+CMD [ "python3", ""cb_flask.py"]
