--- a/podman/Containerfile
+++ b/podman/Containerfile
@@ -3,9 +3,12 @@
 FROM python:3.8-slim-buster
 WORKDIR /cb_flask
 
-COPY requirements.txt ./config/requirements.txt
+COPY ../python/config/requirements.txt ./config/requirements.txt
 RUN pip3 install -r ./config/requirements.txt
 
-COPY . . (python files into container)
+# ../
+COPY ../python ./python
 
-CMD [ "python3", ""cb_flask.py"]
+EXPOSE 5001
+
+CMD [ "flask", "run", "--host=0.0.0.0", "--port=5001"]
